--- a/_posts/2022-11-19-library란.md
+++ b/_posts/2022-11-19-library란.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Showing the word count in Jekyll
+title: 라이브러리란 무엇일까?
 description: Obtaining the word count from a post in Jekyll
 summary: Obtaining the word count from a post in Jekyll.
 tags: jekyll coding
